# weaviate-vibe-eval

./: .gitignore  README.md  benchmark_weaviate.py  check_weaviate_vibes.py  example_code_execution.py  pyproject.toml  requirements.txt  weaviate_vibe_checks.py
.cursor/rules/: project-rules.mdc
docker/: Dockerfile  README.md  build_image.sh  requirements.txt
example_results/: benchmark_results_20250403_100700.json  benchmark_results_20250403_100700.md  benchmark_results_20250408_224830.json  benchmark_results_20250408_224830.md  benchmark_results_20250415_153618_openai.json  benchmark_results_20250415_153618_openai.md  benchmark_results_20250415_185857_made_up_syntax.json  benchmark_results_20250415_185857_made_up_syntax.md  benchmark_results_20250415_191833_made_up_syntax.json  benchmark_results_20250415_191833_made_up_syntax.md  benchmark_results_20250415_192952_made_up_syntax.json  benchmark_results_20250415_192952_made_up_syntax.md  benchmark_results_20250415_194939_made_up_syntax.json  benchmark_results_20250415_194939_made_up_syntax.md  benchmark_results_20250817_212030.json  benchmark_results_20250817_212030.md  benchmark_results_20250817_221108.json  benchmark_results_20250817_221108.md  benchmark_results_20250817_225440.json  benchmark_results_20250817_225440.md
models/: base_model.py
results/: anthropic_claude_3_7_sonnet_20250219.json
tests/: test_anthropic_model.py  test_code_execution.py  test_cohere_model.py  test_docker_executor.py  test_gemini_model.py  test_openai_model.py
weaviate_vibe_eval/benchmarks/: __init__.py  benchmark_runner.py  canonical_implementations.py  extensive_example_set.py  tasks.py
weaviate_vibe_eval/models/: __init__.py  anthropic_model.py  base_model.py  judge_model.py  model.py  model_names.py
weaviate_vibe_eval/utils/: code_execution.py  docker_executor.py
