[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaviate-vibe-eval"
version = "0.1.1"
description = "Evaluate LLM capabilities with Weaviate client code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.64.0",
    "cohere>=5.17.0",
    "google-genai>=1.30.0",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "python-dotenv>=1.0.0",
    "weaviate-client>=4.16.7",
    "weaviate-demo-datasets>=0.7.0",
]

[tool.setuptools]
packages = ["weaviate_vibe_eval"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
